# SmoothController

./: CMakeLists.txt  README.md  test_smooth.cpp
inc/: kalman_controller.hpp  smooth_controller.hpp  smoother.hpp
source/: kalman_controller.cpp  smooth_controller.cpp  smoother.cpp
